# presto

./: Makefile.am  configure.in
docs/: prepfold.1
include/: sigproc_fb.h
src/: GBT350filterbank.c  Makefile  Makefile.am  PMsurv_phasemod.c  accel_utils.c  accelsearch.c  accelsearch_cmd.c  amoeba.c  apprgrdn.c  atwood.c  bary.c  barycenter.c  bincand.c  bincand_cmd.c  birdzap.c  bpp.c  cal2mjd.c  cand_output.c  characteristics.c  check_parkes_raw.c  chkio.c  cldj.c  clipping.c  com.c  corr_prep.c  corr_routines.c  correlations.c  dat2sdat.c  database.c  dcdflib.c  dftfold.c  dftfold_cmd.c  dispersion.c  djcl.c  dm_tree.c  dm_tree_main.c  downsample.c  downsample_cmd.c  dump_spigot_zerolag.c  exploredat.c  (+114 more)
src/slalib/: Makefile.am
