#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.57)
AC_INIT([Presto],[1.01],[mkeith@pulsarastronomy.net])

if test -n "${CXXFLAGS}"; then
	user_set_cxxflags=yes
fi

SWIN_OPTIONS_SET

AC_CONFIG_AUX_DIR([config])
#AC_CONFIG_SRCDIR([Makefile.am])
# Create static libraries by default
AC_DISABLE_SHARED

# Enable large-file support
AC_SYS_LARGEFILE

# Determine the machine endian
AC_C_BIGENDIAN

# Checks for programs.
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_CC
AC_PROG_CPP
AM_PROG_CC_C_O
AC_PROG_F77
AC_PROG_F77_C_O
AC_F77_LIBRARY_LDFLAGS

if test -n "${CXXFLAGS}"; then
	user_set_cxxflags=yes
fi
AC_PROG_CXX
if test X$user_set_cxxflags != Xyes; then
	CXXFLAGS="-O2"
fi


AC_PROG_INSTALL
AC_PROG_LIBTOOL



AC_MSG_CHECKING([PRESTO points to a valid directory])
if test -d $PRESTO -a -e $PRESTO/include/presto.h  ; then
	AC_MSG_RESULT(yes)
	AC_MSG_RESULT(PRESTO=$PRESTO)
	PRESTO_DIR=$PRESTO
	AC_SUBST(PRESTO_DIR)
else
	AC_MSG_RESULT(no)
	AC_MSG_RESULT(PRESTO=$PRESTO)
	AC_ERROR("You must set \$PRESTO to be the root of the presto directory.");
fi



AM_PATH_GLIB_2_0

if test "x$GLIB_LIBS" == "x" ; then
	 AC_ERROR("Can't find glib library.");
fi

SWIN_LIB_PGPLOT

if test X$have_pgplot != Xyes; then
	AC_ERROR("Can't find your PGPLOT installation")
fi

SWIN_LIB_CFITSIO

if test X$have_cfitsio != Xyes; then
	AC_ERROR("Can't find your CFITSIO installation")
fi



MJK_LIB_FFTW

if test X$have_fftw != Xyes; then
	AC_ERROR("Need single precision FFTW 3 library to compile (libfftw3f.a)! Specify location with --with-fftw-dir")
else
	FFTDEF="-DUSEFFTW"
	AC_SUBST(FFTDEF)
fi


AM_INIT_AUTOMAKE([foreign subdir-objects])

AM_CONFIG_HEADER([config.h])
AC_CONFIG_FILES([Makefile src/Makefile src/slalib/Makefile])

AC_OUTPUT
